# polimi_robotics_project1

./: CMakeLists.txt  README.md  instructions.md  package.xml  plotjuggler_setup_GT_comparison.xml  plotjuggler_setup_rpm_comparison.xml  project1.tar.xz  readme
cfg/: parameters.cfg
include/: encoder_computations.h
launch/: project.launch
src/: command_node.cpp  control_node.cpp  control_pub.cpp  encoder_computations.cpp  odometry_node.cpp  odometry_pub.cpp
srv/: Reset.srv
